--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-minimal
 
+Logo: ![Profile_Picture](https://github.com/hannahwh05/hannahwh05.github.io/blob/master/43998956.jpg)
+
 plugins:
   - jemoji
