--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-Logo: hannahwh05.github.io/images/43998956.jpg
+avatar: "hannahwh05.github.io/images/43998956.jpg"
       
 plugins:
   - jemoji
