--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,12 @@
 theme: jekyll-theme-minimal
+
 avatar: "hannahwh05.github.io/images/43998956.jpg"
-      
+
+share-links-active:
+  twitter: false
+  facebook: false
+  google: false
+  linkedin: true
+
 plugins:
   - jemoji
